# index.js
@@ -4,8 +4,8 @@ import swaggerUi from 'swagger-ui-express';
 import expenses from "./routes/expenses.js";
 import expense from "./routes/expense.js";
 import statistics from "./routes/statistics.js";
-import expressBasicAuth from "express-basic-auth";
 import user from "./routes/user.js";
+import auth from "./routes/auth.js";
 
 const require = createRequire(import.meta.url);
 
@@ -28,3 +28,4 @@ app.use('/expenses/user', expenses)
 app.use('/expense/user', expense)
 app.use('/expenses-statistics/user', statistics)
 app.use('/user', user)
+app.use('/is_authorize',auth)
